--- a/src/app/shakemap/uncertainty/uncertainty.component.html
+++ b/src/app/shakemap/uncertainty/uncertainty.component.html
@@ -1,5 +1,4 @@
-<ng-container *ngIf="imageUrl as url;
-                      else noImage">
+<ng-container *ngIf="imageUrl as url; else noImage">
   <img src="{{ url }}">
 </ng-container>
 
