set interactive to true for interactive map

--- a/src/app/map/map/map.component.html
+++ b/src/app/map/map/map.component.html
@@ -3,7 +3,8 @@
     <shared-map
         [overlays]="event | interactiveMapOverlays:params"
         [showLayersControl]="true"
-        [showScaleControl]="true">
+        [showScaleControl]="true"
+        [interactive]="true">
     </shared-map>
   </ng-container>
 </ng-container>
