--- a/src/app/executive/map-pin/map-pin.component.html
+++ b/src/app/executive/map-pin/map-pin.component.html
@@ -4,7 +4,6 @@
     [title]="title">
   <shared-map card-content
       [overlays]="event | interactiveMapOverlays:null"
-      [showAttributionControl]="false"
-      [showLayersControl]="false">
+      [showAttributionControl]="false">
   </shared-map>
 </basic-pin>
