--- a/src/app/executive/region-info-pin/region-info-pin.component.css
+++ b/src/app/executive/region-info-pin/region-info-pin.component.css
@@ -1,7 +1,7 @@
-.map {
-  background: #eee;
-  height: 0;
-  padding-bottom: 100%;
-  pointer-events: none;
+shared-map {
+  display: block;
+  height: 200px;
+  max-height: 100%;
   width: 100%;
+  pointer-events: none;
 }
