Add geoserve components to region info page

--- a/src/app/region-info/region-info/region-info.component.html
+++ b/src/app/region-info/region-info/region-info.component.html
@@ -7,4 +7,8 @@
         [showScaleControl]="true">
     </shared-map>
   </a>
+  <!-- Geoserve Components -->
+  <app-admin-region></app-admin-region>
+  <app-nearby-places></app-nearby-places>
+  <app-tectonic-summary-region></app-tectonic-summary-region>
 </ng-container>
