Add alt for uncertainty image
Also add .vscode dir to .gitignore

--- a/src/app/shakemap/uncertainty/uncertainty.component.html
+++ b/src/app/shakemap/uncertainty/uncertainty.component.html
@@ -1,5 +1,5 @@
 <ng-container *ngIf="imageUrl as url; else noImage">
-  <img src="{{ url }}">
+  <img src="{{ url }}" alt="ShakeMap Uncertainty image">
 </ng-container>
 
 <ng-template #noImage>
