create losspager module

--- a/src/app/event-page/navigation/navigation.component.html
+++ b/src/app/event-page/navigation/navigation.component.html
@@ -26,7 +26,7 @@
         display="ShakeMap" class="not-supported"
         navRouterLink="shakemap"></app-navigation-item>
     <app-navigation-item *ngIf="event.hasProducts('losspager')"
-        display="PAGER" class="not-supported"
+        display="PAGER"
         navRouterLink="pager"></app-navigation-item>
   </app-navigation-group>
 
