--- a/src/app/tell-us/location/location.component.html
+++ b/src/app/tell-us/location/location.component.html
@@ -1,3 +1,4 @@
 <p>
-  location works!
+  <button mat-raised-button (click)="enterLocation()">Enter Location</button>
+  <button mat-raised-button (click)="clearLocation()">Clear Location</button>
 </p>
