created basic pin outline whith title and link

--- a/src/app/executive/dyfi-response-submit-pin/dyfi-response-submit-pin.component.html
+++ b/src/app/executive/dyfi-response-submit-pin/dyfi-response-submit-pin.component.html
@@ -1,3 +1,6 @@
-<p>
-  dyfi-response-submit-pin works!
-</p>
+<basic-pin *ngIf="product"
+    [link]="link"
+    [product]="product"
+    [title]="title">
+
+</basic-pin>
