--- a/src/app/executive/executive/executive.component.html
+++ b/src/app/executive/executive/executive.component.html
@@ -14,6 +14,11 @@
       </executive-region-info-pin>
     </li>
 
+    <li *ngIf="event | getProduct:'dyfi'; let dyfi">
+      <executive-dyfi-response-submit-pin [product]="dyfi">
+      </executive-dyfi-response-submit-pin>
+    </li>
+
     <li *ngIf="event | getProduct:'origin'; let origin">
       <executive-origin-pin [product]="origin">
       </executive-origin-pin>
