--- a/src/app/tell-us/location/location.component.html
+++ b/src/app/tell-us/location/location.component.html
@@ -1,4 +1,9 @@
 <p>
-  <button mat-raised-button (click)="enterLocation()">Enter Location</button>
-  <button mat-raised-button (click)="clearLocation()">Clear Location</button>
+  <button mat-raised-button (click)="enterLocation()">
+    {{ enter }}
+  </button>
+
+  <button mat-raised-button (click)="clearLocation()">
+    Clear Location
+  </button>
 </p>
