Update tell us list items to use padding instead of margin

--- a/src/app/tell-us/question/question.component.scss
+++ b/src/app/tell-us/question/question.component.scss
@@ -7,7 +7,7 @@ mat-selection-list {
 mat-list > mat-list-item,
 mat-selection-list > mat-list-option {
   height: auto;
-  margin: 0.5em 0;
+  padding: 0.5em 0;
 }
 
 mat-radio-button {
