--- a/src/app/tell-us/form/form.component.scss
+++ b/src/app/tell-us/form/form.component.scss
@@ -7,7 +7,7 @@ h2 {
   margin-top: 0;
 }
 
-h2 > span {
+.felt-header {
   display: block;
   flex: 1;
 }
@@ -25,14 +25,4 @@ mat-expansion-panel {
 
 mat-form-field {
   display: block;
-}
-
-fieldset {
-  border: 0;
-  margin: 1em 0;
-  padding: 0;
-}
-
-legend {
-  font-weight: 700;
 }
