--- a/src/app/tell-us/form/form.component.html
+++ b/src/app/tell-us/form/form.component.html
@@ -28,6 +28,17 @@
           [enter]="language.locationInfo.button"
           [update]="language.locationInfo.buttonUpdate">
       </tell-us-location>
+
+      <pre>{{
+
+        {
+          ciim_mapAddress: answers.ciim_mapAddress,
+          ciim_mapConfidence: answers.ciim_mapConfidence,
+          ciim_mapLat: answers.ciim_mapLat,
+          ciim_mapLon: answers.ciim_mapLon
+        } | json
+
+      }}</pre>
     </tell-us-fieldset>
 
     <!-- time -->
